# SpecUNet

./: .gitignore  DataSimulation.m  ExperimentalData_Evaluation.m  LICENSE  README.md  TrainingData.html
MATLAB/: DataSimulation.m  Evaluation_IndependentTestingData.m  Networktraining.m  README.md  net.mat  setNetworkMaxpooling.m
Python/: .gitignore  README.md  setup.cfg
Python/specunet_pkg/: __main__.py  dataset.py  hyperparameter_search.py  logger.py  main.py  metrics.py  models.py  praser.py  requirements.txt  spectra_crop.ipynb  spectra_crop.py  spectra_crop_from_locs.py  test.py  train.py  utils.py
Python/specunet_pkg/config/: SpecUNet.json
