[metadata]
name = specunet_pkg
version = 1.0.0
author = Obblivignes KanchanadeviVenkataraman, Hongjing Mao, Dr. Dongkuan Xu, Dr. Yang Zhang, Dr. Caroline Laplante
author_email = switfluors@gmail.com
description = An implementation of a Conventional UNet for spectral image denoising.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/switfluors/SpecUNet.git
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Processing
license = "MIT"

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    h5py
    hdf5storage
    pillow
    scipy
    tqdm
    onnx
    onnxscript
    pandas
    openpyxl
    scikit-image
    torch
    torchvision
    torchaudio

[options.package_data]
specunet_pkg = config/*.json, *.md, *.ipynb